# yoke

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: pyproject.toml
backend/src/yoke/: __init__.py  config.py  downloader.py  key_analyzer.py  logging.py  main.py  models.py  redis_store.py  router.py  session.py  ws.py  youtube.py
backend/tests/: test_downloader.py  test_key_analyzer.py  test_models.py  test_redis_store.py  test_router.py  test_session.py  test_ws.py  test_youtube.py
docs/plans/: 2026-02-11-karaoke-app-design.md  2026-02-11-yoke-implementation-plan.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: control-url.ts  types.ts  ws.ts
frontend/src/lib/audio/: pitch-shifter.ts
frontend/src/lib/components/: FloatingMessages.svelte  IdleScreen.svelte  MessageInput.svelte  NameEntry.svelte  Notifications.svelte  PlaybackBar.svelte  QrOverlay.svelte  QueueTab.svelte  SearchTab.svelte  SettingsTab.svelte  StatusBadge.svelte  TopBar.svelte  VideoPlayer.svelte
frontend/src/lib/stores/: session.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/control/: +page.svelte
frontend/src/routes/display/: +page.svelte
