[project]
name = "yoke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Winston Van", email = "winstonvan@live.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "redis[hiredis]>=5.0.0",
    "yt-dlp>=2024.0.0",
    "pydantic>=2.10.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "fakeredis>=2.26.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty]
python-version = "3.13"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
