[project]
name = "yoke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Winston Van", email = "winstonvan@live.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.128.8",
    "uvicorn[standard]~=0.40.0",
    "redis[hiredis]~=7.1.1",
    "yt-dlp~=2026.2.4",
    "pydantic~=2.12.5",
    "websockets~=16.0",
    "librosa~=0.11.0",
]

[dependency-groups]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "fakeredis~=2.33.0",
    "ruff~=0.15.1"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:audioread",
    "ignore::FutureWarning:librosa",
    "ignore::UserWarning:librosa",
]

[tool.ty]
python-version = "3.13"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
